--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "plug",
-  "version": "1.0.0",
-  "description": "A new project repository.",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@vitejs/plugin-react": "^5.0.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "vite": "^7.1.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12"
-  }
+    "name": "plug",
+    "version": "1.0.0",
+    "description": "A new project repository.",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@vitejs/plugin-react": "^4.7.0",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
+        "vite": "^5.4.19"
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.12",
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.12"
+    }
 }
