--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "license": "ISC",
     "dependencies": {
         "@vitejs/plugin-react": "^4.7.0",
+        "firebase": "^12.2.1",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "vite": "^5.4.19"
     },
     "devDependencies": {
-        "@tailwindcss/postcss": "^4.1.12",
         "autoprefixer": "^10.4.21",
         "postcss": "^8.5.6",
-        "tailwindcss": "^4.1.12"
+        "tailwindcss": "^3.4.17"
     }
 }
